Fixed a bit buggy cards on smaller screens

--- a/src/components/profile/knows/person/style.module.css
+++ b/src/components/profile/knows/person/style.module.css
@@ -15,5 +15,5 @@
     overflow: hidden;
     padding: 0.25rem 0 0 0;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: normal;
 }
